k8s/03-mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kartify-mongo
  namespace: kartify
spec:
  serviceName: kartify-mongo
  replicas: 1
  selector:
    matchLabels:
      app: kartify-mongo
  template:
    metadata:
      labels:
        app: kartify-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            exec:
              command: ["mongosh", "--quiet", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["mongosh", "--quiet", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 20
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kartify-mongo
  namespace: kartify
spec:
  clusterIP: None # headless service, required for StatefulSet DNS
  selector:
    app: kartify-mongo
  ports:
    - port: 27017
      targetPort: 27017
