k8s/05-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kartify-frontend
  namespace: kartify
  labels:
    app: kartify-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kartify-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: kartify-frontend
    spec:
      containers:
        - name: kartify-frontend
          # Replace with your pushed image, e.g. ghcr.io/<you>/kartify-frontend:1.0.0
          image: kartify-frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: kartify-frontend
  namespace: kartify
spec:
  selector:
    app: kartify-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
